# x11-rs

generate/: .gitignore  generate.h  generate.sh
src/: xrandr.rs
x11/: build.rs
x11-dl/: Cargo.toml
x11/src/: lib.rs  tests.rs
x11/src/headers/: mod.rs  x.rs  xkblib.rs  xlib.rs  xproto.rs  xregion.rs  xresource.rs  xutil.rs
x11/src/headers/extensions/: mod.rs  xkb.rs  xkbstr.rs
x11/src/libs/: mod.rs  x11.rs
