[package]
name = "x11-dl"
version = "3.0.0"
authors = ["Daggerbot <daggerbot@gmail.com>"]
description = "X11 library bindings for Rust"
license = "CC0-1.0"
repository = "https://github.com/Daggerbot/x11-rs.git"

[dependencies]
dylib = "*"
x11 = { version = "3.0.0", default-features = false }

[features]
default = ["x11"]
x11 = []
